--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
 
-  <!-- <link rel="stylesheet" href="./css/stylesheet.css"> -->
+  <link rel="stylesheet" href="./css/stylesheet.css"> 
 
 
   <script src="https://use.fontawesome.com/b615429ab8.js"></script>
