--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
 
-  <link rel="stylesheet" href="./css/stylesheet.css"> 
-
-
+  <link rel="stylesheet" href="./css/stylesheet.css">
   <script src="https://use.fontawesome.com/b615429ab8.js"></script>
-
-
-
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -52,9 +46,10 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
+<!-- ABOUT NAV TAB
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -198,13 +193,25 @@
             </a>
           </div>
 
-
-
-
+          <!-- Portfolio Grid Section - Ninth Thumbnail -->
+          <div class="col-sm-4 portfolio-item">
+            <a class="portfolio-link" href="#portfolioModal9" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-1x"></i>
+                  <p class="pgrid">'Maple Infographic'
+                    <BR>Motion Graphics</p>
+                </div>
+              </div>
+              <img class="img-fluid" src="images/maple.jpg" alt="">
+            </a>
+          </div>
 
     </section>
 
-    <!-- About Section -->
+
+
+    <!--
     <section class="success" id="about">
       <h2 class="text-center">About</h2>
 
@@ -215,16 +222,15 @@
       <div class="ball"></div>
       <div class="cardcontainer">
 
-        <!-- left box content START -->
+        <!-- left box content START
         <div class="leftbox">
           <p class="name">Laurie Cat</p>
           <p class="imd">IMD Student</p>
           <p class="imd hooverover"> (Hover over) <i class="fa fa-caret-right" aria-hidden="true"></i></p>
-
         </div>
-        <!-- left box content END -->
+        <!-- left box content END
 
-        <!--card picture and info front and back start -->
+        <!--card picture and info front and back start
         <div class="card">
           <div class="content">
             <div class="front">
@@ -245,6 +251,7 @@
           </div>
         </div>
       </div>
+    -->
 
       <!-- <div class="container">
         <h2 class="text-center">About</h2>
@@ -263,8 +270,9 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
     </section>
+    ENDS ABOUT ME SECTION -->
 
     <!-- Contact Section -->
     <section id="contact">
@@ -630,6 +638,40 @@
             </div>
           </div>
         </div>
+
+        <!-- MODAL 9 Maple Infographic-->
+            <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                      <div class="rl"></div>
+                    </div>
+                  </div>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-lg-8 mx-auto">
+                        <div class="modal-body">
+                          <h2>Maple Infographic</h2>
+
+                          <iframe src="https://player.vimeo.com/video/241803584" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<p> This is one of my current projects and is a work in progress. </p>
+
+
+
+
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
 
 
 
