--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
-        <h2 class="text-center">Contact Me</h2>
+        <h2 class="text-center">Message Me</h2>
 
         <div class="row">
           <div class="col-lg-8 mx-auto">
